--- a/src/app.html
+++ b/src/app.html
@@ -1,12 +1,12 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="min-w-[320px] primary-bg">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.svg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover" class="primary-bg min-w-[320px] antialiased select-none">
+	<body data-sveltekit-preload-data="hover" class="antialiased select-none">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html> 
