feat: add structured metadata for Stratus Ventures organization in app.html for SEO

--- a/src/app.html
+++ b/src/app.html
@@ -23,6 +23,27 @@
 		<meta property="og:image" content="https://stratus-ventures.org/social/banner.png" />
 		<meta property="og:url" content="https://stratus-ventures.org" />
 		<meta property="og:type" content="website" />
+
+		<script type="application/ld+json">
+			{
+			  "@context": "https://schema.org",
+			  "@type": "Organization",
+			  "name": "Stratus Ventures LLC",
+			  "url": "https://stratus-ventures.org",
+			  "logo": "https://stratus-ventures.org/social/banner.png",
+			  "founder": {
+				"@type": "Person",
+				"name": "Jason Coawette",
+				"url": "https://x.com/jasoncoawette"
+			  },
+			  "address": {
+				"@type": "PostalAddress",
+				"addressLocality": "Phoenix",
+				"addressRegion": "AZ",
+				"addressCountry": "US"
+			  }
+			}
+		</script>
 		
 		<script>
 			const theme = localStorage.getItem('theme') || 'system';
