Pushing new stuff

--- a/src/app.html
+++ b/src/app.html
@@ -2,7 +2,7 @@
 <html lang="en" class="min-w-[360px] primary-bg">
 	<head>
 		<meta charset="utf-8" />
-		<title>Stratus Ventures LLC</title>
+		<title>Stratus - AI Software Products</title>
 		<meta name="description" content="Stratus Ventures LLC owns a group of product-focused ventures founded by Jason Coawette and is located in Phoenix, Arizona." />
 		
 		<!-- Favicon -->
